# osks

./: CMakeLists.txt  LICENSE  README.md
src/: binary_sems.c  binary_sems.h  error_functions.c  get_num.c  get_num.h  myhdr.h  semun.h  svmsg_hdr_file.h  svmsg_receiver.c  svmsg_sender.c  svshm_hdr_file.h  svshm_receiver.c  svshm_sender.c
src/lib/: error_functions.c
test/: main.cpp
